# Tesi

Documento/: ~$Tesi.docx
Elaborato/: Developing and Managing Applications on Top of the WebAssembly System Interface (WASI).docx  Exploring the WebAssembly System Interface (WASI) - Principles and Applications.docx  Performance matrix determinant.xlsx  Project diagram.drawio  Tesi.docx  results.xlsx  ~$Tesi.docx  ~$ploring the WebAssembly System Interface (WASI) - Principles and Applications.docx  ~$veloping and Managing Applications on Top of the WebAssembly System Interface (WASI).docx  ~WRL0005.tmp  ~WRL2098.tmp  ~WRL2403.tmp
Elaborato/Presentazione/: Copione.docx  Presentazione.pptx  Script.docx
Esempi/01-HelloWorld/: compile_wasm.sh  demo.c  demo.libc  demo.wasm  index.mjs  package.json  run_node.sh  run_wasi.sh  run_wasmtime.sh
Esempi/03-Primes/: OUTPUT  compile_and_benchmark.sh  package-lock.json  package.json  server.mjs
Esempi/05-OpenCV/02-BasicFunctions/: BasicFunctions.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Esempi/06-STBImage/: Image.c  compileandrun.sh  main.cpp  t0  t0.c  t1  t2  t2.wasm
Materiale/: Links.docx  ~$Links.docx
Progetto/: compileandrun.sh  index.mjs  package.json  results.csv  results.xlsx  results_2.csv  run.sh  steps.sh  utils.mjs
Progetto/c/: Image.c  Image.h  black_and_white  black_and_white.c  black_and_white.wasm  blur  blur.c  brightness.c  compile.sh  compile_all.sh  compile_bare.sh  compileandrun.sh  contrast.c  convert.c  crop  (+8 more)
RaccoltaMateriale/: Links.docx  Spunti intro.txt  ~$Links.docx
(+38 files in other folders)
